--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -4,7 +4,7 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        link(rel='stylesheet', href='css/main.css')
+        link(rel='stylesheet', href='/css/main.css')
         title #{ pageTitle }
         block styles
     body
@@ -12,7 +12,13 @@ html(lang="en")
             nav.main-header__nav
                 ul.main-header__item-list
                     li.main-header__item
-                        a.active(href='/') Shop
+                        a(class={ active: path === '/' } href='/') Shop
                     li.main-header__item
-                        a(href="/admin/add-product") Product
+                        a(class={ active: path === '/products' } href='/products') Products
+                    li.main-header__item
+                        a(class={ active: path === '/cart' } href='/cart') Cart
+                    li.main-header__item
+                        a(class={ active: path === '/admin/add-product' } href="/admin/add-product")  Add product
+                    li.main-header__item
+                        a(class={ active: path === '/admin/products' } href="/admin/products")  Admin products
         block content
