--- a/views/shop/product-list.pug
+++ b/views/shop/product-list.pug
@@ -1,4 +1,4 @@
-extends layouts/main-layout.pug
+extends ../layouts/main-layout.pug
 block styles
     link(rel="stylesheet", href="css/products.css")
 block content
@@ -10,12 +10,13 @@ block content
                         header.card__header
                             h1.product__title #{ product.title }
                         .card__image
-                            img(src="", alt="")
+                            img(src=product.imageUrl, alt=product.title)
                         .card__content
-                            h2.product__price $19.99
-                            p.product__description Asdasdasda
+                            h2.product__price $#{ product.price }
+                            p.product__description #{ product.description }
                         .card__actions
-                            button.btn Add to Cart
+                            form(action='/add-to-cart' method='POST')
+                            button.btn(type='POST') Add to Cart
         else
             h1 No products
 
