Added orders page

--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -18,6 +18,8 @@ html(lang="en")
                     li.main-header__item
                         a(class={ active: path === '/cart' } href='/cart') Cart
                     li.main-header__item
+                        a(class={ active: path === '/orders' } href='/orders') Orders
+                    li.main-header__item
                         a(class={ active: path === '/admin/add-product' } href="/admin/add-product")  Add product
                     li.main-header__item
                         a(class={ active: path === '/admin/products' } href="/admin/products")  Admin products
