Added product detail page

--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -14,7 +14,7 @@ html(lang="en")
                     li.main-header__item
                         a(class={ active: path === '/' } href='/') Shop
                     li.main-header__item
-                        a(class={ active: path === '/products' } href='/products') Products
+                        a(class={ active: path === '/products' || path === '/product-detail' } href='/products') Products
                     li.main-header__item
                         a(class={ active: path === '/cart' } href='/cart') Cart
                     li.main-header__item
