--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -2,5 +2,13 @@ extends ../layouts/main-layout.pug
 block styles
 
 block content
-    main
-        | Hello from Product detail
+    main.centered
+        h1 #{product.title}
+        hr
+        div
+            img(src=product.imageUrl alt=product.title)
+        h2 #{product.price}
+        p #{product.description}
+        form(action='/cart' method='POST')
+            button.btn Add to cart 
+        
