--- a/views/shop/product-list.pug
+++ b/views/shop/product-list.pug
@@ -15,6 +15,7 @@ block content
                             h2.product__price $#{ product.price }
                             p.product__description #{ product.description }
                         .card__actions
+                            a.btn(href=`products/${product.id}`) Details
                             form(action='/add-to-cart' method='POST')
                             button.btn(type='POST') Add to Cart
         else
