--- a/views/shop/product-list.pug
+++ b/views/shop/product-list.pug
@@ -16,8 +16,7 @@ block content
                             p.product__description #{ product.description }
                         .card__actions
                             a.btn(href=`products/${product.id}`) Details
-                            form(action='/add-to-cart' method='POST')
-                            button.btn(type='POST') Add to Cart
+                            include ../includes/add-to-cart.pug
         else
             h1 No products
 
