--- a/views/shop/product-detail.pug
+++ b/views/shop/product-detail.pug
@@ -9,6 +9,5 @@ block content
             img(src=product.imageUrl alt=product.title)
         h2 #{product.price}
         p #{product.description}
-        form(action='/cart' method='POST')
-            button.btn Add to cart 
+        include ../includes/add-to-cart.pug
         
