Added edit product

--- a/views/admin/products.pug
+++ b/views/admin/products.pug
@@ -15,6 +15,6 @@ block content
                             h2.product__price $#{ product.price }
                             p.product__description #{ product.description }
                         .card__actions
-                            a.btn(href='/admin/edit-product') Edit product
+                            a.btn(href=`/admin/edit-product/${product.id}?edit=true`) Edit product
                             form(action='/admin/delete-product' method='POST')
                                 button.btn(type='submit') Delete product
