--- a/views/admin/products.pug
+++ b/views/admin/products.pug
@@ -15,7 +15,7 @@ block content
                             h2.product__price $#{ product.price }
                             p.product__description #{ product.description }
                         .card__actions
-                            a.btn(href=`/admin/edit-product/${product.id}?edit=true`) Edit product
+                            a.btn(href=`/admin/edit-product/${product._id}?edit=true`) Edit product
                             form(action='/admin/delete-product' method='POST')
-                                input(type='hidden' name='id' value=product.id)
+                                input(type='hidden' name='id' value=product._id)
                                 button.btn(type='submit') Delete product
