--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -10,7 +10,7 @@ block content
                     li
                         p #{product.title} (#{productData.quantity})
                         form(action='/cart-delete-item' method='POST')
-                            input(type='hidden' name='id' value=product.id)
+                            input(type='hidden' name='id' value=product._id)
                             button.btn(type='submit') Delete
         else
             h1 No products in cart
