--- a/views/includes/add-to-cart.pug
+++ b/views/includes/add-to-cart.pug
@@ -1,3 +1,3 @@
 form(action='/cart' method='POST')
     button.btn Add to cart
-    input(type='hidden' name='id' value=product.id)
+    input(type='hidden' name='id' value=product._id)
