--- a/views/shop/cart.pug
+++ b/views/shop/cart.pug
@@ -5,12 +5,13 @@ block content
     main
         if(products && products.length)
             .grid
-                each productData in products
-                    - var product = productData.product;
+                each product in products
                     li
-                        p #{product.title} (#{productData.quantity})
+                        p #{product.title} (#{product.quantity})
+                        p #{product.price}
                         form(action='/cart-delete-item' method='POST')
                             input(type='hidden' name='id' value=product._id)
                             button.btn(type='submit') Delete
+            p Total price #{total}
         else
             h1 No products in cart
